--- a/styles/notion.css
+++ b/styles/notion.css
@@ -7,9 +7,13 @@
  * places to add some flare.
  */
 
- .notion {
-  --notion-max-width: 800px;
+.notion {
+  --notion-max-width: 720px;
   --notion-header-height: 54px;
+}
+
+.notion-frame {
+  padding: 0;
 }
 
 .notion-page {
@@ -18,7 +22,7 @@
 }
 
 .index-page {
-  --notion-max-width: 1300px;
+  --notion-max-width: 900px;
 }
 
 .notion-text {
@@ -34,60 +38,34 @@
   margin-bottom: 1em;
 }
 
-.notion-asset-wrapper video {
-  height: 100%;
-  height: -moz-available;
-  /* WebKit-based browsers will ignore this. */
-  height: -webkit-stretch;
-  /* Mozilla-based browsers will ignore this. */
-  height: stretch;
-  max-height: 80vh;
-  max-width: 80vw;
+.notion-asset-wrapper-video > div,
+.notion-asset-wrapper-video video {
+  width: 100% !important;
 }
 
-.notion-asset-wrapper iframe {
-  max-width: 95vw;
-}
-
-.lazy-image-wrapper img.lazy-image-real {
-  position: relative !important;
-}
-
-.lazy-image-wrapper.lazy-image-loaded {
-  padding-bottom: 0px !important;
-}
-
-@media only screen and (min-width: 600px) {
-
-  /* Use object-fit contain if image width is not Notion's recommended width */
-  .lazy-image-wrapper img:not([width="1500"]):not([src*="//images.unsplash.com"]) {
-    object-fit: contain;
-  }
-}
-
-.notion-header .nav-header {
-  max-width: 1300px;
+.notion-header .notion-nav-header {
+  max-width: 1100px;
   margin: 0 auto;
+  overflow-x: auto;
+}
+
+.notion-nav-header-rhs {
+  gap: 0.5rem;
 }
 
 .notion-gallery-grid {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-  grid-gap: 2vmin;
-  gap: 2vmin;
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  grid-gap: 6vmin;
+  gap: 6vmin;
 }
 
-.notion-gallery-grid .notion-page-icon {
+.notion-gallery-grid .notion-page-icon-inline {
   display: none;
 }
-.notion-page-title-text {
-  border-bottom: none !important;
-  text-align: start;
-}
+
 .notion-gallery-grid .notion-page-title-text {
-  font-size: 1.3em;
+  font-size: 2em;
   white-space: unset;
-  color: #fff;
-  text-align: start;
 }
 
 .notion-gallery-grid .notion-collection-card-property {
@@ -100,16 +78,12 @@
 }
 
 .notion-collection-card {
-  border-radius: 10px;
+  border-radius: 16px;
   box-shadow: none;
-  background: #0170dc;
-  color: #000000;
 }
-.notion-collection-card:hover {
-  background: #00509e;
-}
+
 .notion-collection-card-cover img {
-  border-radius: 10px;
+  border-radius: 16px;
 }
 
 .notion-collection-card {
@@ -117,8 +91,7 @@
 }
 
 .notion-collection-card-cover {
-  border-radius: 10px;
-  overflow: visible;
+  border-radius: 16px;
   box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
 }
 
@@ -132,9 +105,12 @@
   filter: brightness(120%);
 }
 
+.notion-collection-card-body {
+  padding: 10px;
+}
+
 /* only target safari */
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-
   _::-webkit-full-page-media,
   _:future,
   :root,
@@ -145,7 +121,10 @@
 
 .notion-quote {
   padding: 0.2em 0.75em;
-  font-size: 1.1em;
+  line-height: 1.5;
+  font-style: italic;
+  font-size: 1.2em;
+  border-left: 4px solid #67bdfc;
 }
 
 .notion-h1,
@@ -162,6 +141,21 @@
   margin: 2em 0;
 }
 
+@media only screen and (max-width: 920px) {
+  .index-page.notion-page {
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .notion-page {
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+}
+
+
 .notion .notion-page-icon-cover {
   margin-left: auto;
   margin-right: auto;
@@ -170,13 +164,14 @@
 .notion-title {
   display: block;
   text-align: center;
-  margin-bottom: 5px;
 }
 
-.notion-collection {
-  justify-content: center;
-  display: flex;
-  align-items: center;
+.notion-collection-row {
+  padding-bottom: 1em;
+}
+
+.notion-collection-page-properties .notion-collection-column-title {
+  display: none;
 }
 
 .notion-collection-row-property .notion-property {
@@ -185,22 +180,27 @@
 }
 
 .notion-collection-row-value {
+  display: flex;
+  align-items: center;
   padding: 0;
+  min-height: 23px;
 }
 
-.notion-page-cover {
-  max-width: 1200px;
-  object-position: center 77% !important;
-  height: 40vh !important;
-  min-height: 40vh !important;
-  max-height: 40vh !important;
+.notion-page-cover-wrapper,
+.notion-page-cover-wrapper span,
+.notion-page-cover-wrapper img {
+  max-width: 1200px !important;
+  border-radius: 24px;
+}
+
+.notion-page-cover-wrapper {
   box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
-  border-radius: 18px;
-  display: none;
 }
 
 @media only screen and (max-width: 1200px) {
-  .notion-page-cover {
+  .notion-page-cover-wrapper,
+  .notion-page-cover-wrapper span,
+  .notion-page-cover-wrapper img {
     border-radius: 0;
   }
 }
@@ -220,10 +220,18 @@
   position: relative;
   transition: unset;
   opacity: 1;
+  border-bottom-width: 0.1rem;
+  background: transparent;
+  background-origin: border-box;
+  background-repeat: no-repeat;
+  background-position: 50% 100%;
+  background-size: 0 0.1rem;
 }
 
+.notion-link:focus,
 .notion-link:hover {
-  border-width: 3px;
+  border-width: 0;
+  border-bottom-width: 3px;
   border-image: linear-gradient(90.68deg, #b439df 0.26%, #e5337e 102.37%);
   border-image-slice: 1;
 }
@@ -238,8 +246,7 @@
 .notion-brown_background,
 .notion-gray_background {
   padding: 0 0.5rem;
-  /* margin: 0 -0.5rem 0 -0.25rem; */
-  margin: 5px 8px;
+  margin: 0 -0.5rem 0 -0.25rem;
   border-radius: 0.5rem;
   border-bottom-left-radius: 0.125rem;
   box-decoration-break: clone;
@@ -247,82 +254,74 @@
   background-color: none;
 
   /* light yellow */
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #fdeed2 10.5%,
-      #fde4b5 85.29%,
-      var(--bg-color));
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #fff697 10.5%,
+    #fdf59d 85.29%,
+    var(--bg-color)
+  );
 }
 
-.notion-purple_background {
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #e4d3fd 10.5%,
-      #d3b6ff 85.29%,
-      var(--bg-color));
-}
-
+.notion-purple_background,
 .notion-pink_background {
   /* light pink */
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #ffd2e7 10.5%,
-      #ffadd3 85.29%,
-      var(--bg-color));
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #f5b8d1 10.5%,
+    #f9bcd3 85.29%,
+    var(--bg-color)
+  );
 }
 
-.notion-blue_background {
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #d9eafd 10.5%,
-      #b3d6ff 85.29%,
-      var(--bg-color));
-}
-
+.notion-blue_background,
 .notion-gray_background {
   /* light blue */
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #cfcfcf 10.5%,
-      #a0a0a0 85.29%,
-      var(--bg-color));
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #adedfc 10.5%,
+    #adebfd 85.29%,
+    var(--bg-color)
+  );
 }
 
-
-.notion-red_background {
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #ffc3c3 10.5%,
-      #fba6a3 85.29%,
-      var(--bg-color));
-}
-
+.notion-red_background,
 .notion-orange_background {
   /* light red */
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #ffe6b1 10.5%,
-      #ffd09b 85.29%,
-      var(--bg-color));
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #f5c4ff 10.5%,
+    #e7a8fc 85.29%,
+    var(--bg-color)
+  );
 }
 
 .notion-teal_background {
   /* light green */
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #d4eabc 10.5%,
-      #DDEDEA 85.29%,
-      var(--bg-color));
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #d4eabc 10.5%,
+    #d2eabc 85.29%,
+    var(--bg-color)
+  );
 }
 
 .notion-brown_background {
-  background-image: linear-gradient(119deg,
-      var(--bg-color),
-      #cab7ae 10.5%,
-      #b1998d 85.29%,
-      var(--bg-color));
+  /* dark blue */
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #96b8ec 10.5%,
+    #a6c3f0 85.29%,
+    var(--bg-color)
+  );
 }
 
+/* disable highlighting in dark mode */
 .dark-mode .notion-red_background,
 .dark-mode .notion-pink_background,
 .dark-mode .notion-blue_background,
@@ -338,14 +337,14 @@
   background: none !important;
 }
 
-.notion-block-f382a57807bc40779860eb079d0144f2 .lazy-image-wrapper {
-  border-radius: 16px;
-}
-
-/* if you don't want rounded page images, remove this */
-.notion-page-icon-wrapper img.notion-page-icon {
+/* if you don't want rounded page icon images, remove this */
+.notion-page-icon-hero.notion-page-icon-image {
   border-radius: 50%;
   box-shadow: 0 8px 40px 0 rgb(0 0 0 / 21%);
+}
+.notion-page-icon-hero.notion-page-icon-image span,
+.notion-page-icon-hero.notion-page-icon-image img {
+  border-radius: 50%;
 }
 
 .notion-header {
@@ -353,14 +352,17 @@
   backdrop-filter: saturate(180%) blur(16px);
 }
 
-.notion-header .breadcrumbs {
-  overflow-x: auto;
-}
-
 .dark-mode .notion-header {
   background: transparent;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
-  backdrop-filter: saturate(180%) blur(8px);
+  backdrop-filter: saturate(180%) blur(20px);
+}
+
+/* Workaround for Firefox not supporting backdrop-filter yet */
+@-moz-document url-prefix() {
+  .dark-mode .notion-header {
+    background: hsla(203, 8%, 20%, 0.8);
+  }
 }
 
 .notion-bookmark:hover {
@@ -368,270 +370,26 @@
   border-image-slice: 1;
 }
 
-/* 自定义样式 */
-
-
-.notion-full-width {
-  --notion-max-width: 800px;
-  padding-left: calc(min(12px, 8vw));
-  padding-right: calc(min(12px, 8vw));
+.notion-block-ab9a258d6cf444f3bb40dc2600feae91 .notion-column {
+  padding: 0;
 }
 
-@media (min-width: 1300px) and (min-height: 300px) {
-  .notion-page-content-has-aside {
-    transform: translateX(calc(-1 * (100vw - var(--notion-max-width)) / 2));
-  }
-}
-
-.notion-aside {
-  overflow-y: auto;
-}
-
-.notion-aside-table-of-contents-header {
+.notion-block-260baa77f1e1428b97fb14ac99c7c385 {
   display: none;
 }
 
-.notion-table-of-contents-item-body {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.notion-search .searchBar {
+  box-shadow: var(--fg-color-0) 0px 1px 0px;
 }
 
-.notion-aside-table-of-contents {
-  max-width: 250px;
-  max-height: 520px;
+.notion-search .noResults {
+  color: var(--fg-color-3);
 }
 
-.notion-aside-table-of-contents::-webkit-scrollbar {
-  display: none;
-  /* Chrome Safari */
+.notion-search .noResultsDetail {
+  color: var(--fg-color-2);
 }
 
-/* 自定义toggle 🐥 */
-
-.notion-toggle>summary::before {
-  content: "🐣 点击展开";
-}
-
-.notion-toggle[open]>summary::before {
-  content: "🐥 点击收起";
-}
-
-.notion-toggle>summary {
-  font-size: 20px !important;
-  color: var(--theme-color, #42b983);
-  font-weight: bold;
-}
-
-/* 修改 blockquote 样式 */
-.notion-quote {
-  border-left: 4px solid var(--theme-color, #42b983);
-  color: #858585;
-}
-
-/* fix code block's shadow */
-pre[class*=language-]:after, pre[class*=language-]:before {
-  box-shadow: none !important;
-}
-
-/* page 404 back to index page text style */
-.page-404 {
-  color: #42b983;
-  font-weight: bold;
-  font-size: 25px;
-}
-
-
-.notion-page-content-inner {
-  text-align: center;
-  justify-content: center !important;
-  align-items: center !important;
-  gap: 5px;
-}
-.notion-collection-header-title {
-  margin-right: 0;
-}
-.notion-text {
-  margin: 0 !important;
-  padding: 0 !important;
-  text-align: start;
-}
-.notion-list-disc {
-  width: 100%;
-  text-align: start;
-}
-.notion-page.notion-page-has-cover.notion-page-has-icon.notion-page-has-text-icon.notion-full-page.index-page {
-  padding-top: 30px;
-}
-.notion-column {
-  gap: 6px;
-  width: 100% !important;
-}
-.notion-hr,
-.notion-blank,
-.notion-hash-link {
-  display: none;
-}
-.notion-column .notion-page-link {
-  margin: 0 !important;
-  background: #0170dc;
-  padding: 20px 10px;
-  border-radius: 5px;
-  color: #fff;
-}
-.notion-page-link:hover {
-  background: #00509e;
-}
-.notion-row {
-  padding: 0 5px;
-  margin-top: 1.5rem;
-}
-.notion-collection .notion-collection-header {
-  display: none;
-}
-.notion-spacer {
-  width: -webkit-calc(min(15px, 4vw)) !important;
-  width: calc(min(15px, 4vw)) !important;
-}
-svg.notion-page-icon {
-  fill: #fff;
-}
-.notion-page-scroller {
-  padding-top: 35px;
-}
-.notion-gallery {
-  margin-top: 1rem;
-  width: 100%;
-}
-.notion-collection-card-body {
-  padding: 5px 15px 0px 15px;
-}
-.notion-property-multi_select-item, .notion-property-select-item {
-  height: 20px;
-}
-.notion-property-multi_select, .notion-property-select {
-  gap: 5px;
-}
-.notion-page-link.notion-block-41b32dcfda184e5c82659c197bafc232 {
-  margin: 0 !important;
-  background: #0170dc;
-  padding: 20px 10px;
-  border-radius: 5px;
-  color: #fff;
-}
-.notion-item-default {
-  background-color: #E3BC00;
-  color: #fff;
-}
-.notion-item-pink {
-  background-color: rgb(219 0 128);
-  color: #fff;
-}
-.notion-item-blue {
-  background-color: rgb(6 140 255);
-  color: #fff;
-}
-.notion-item-orange {
-  background-color: rgb(255 97 0);
-  color: #fff;
-}
-.notion-item-green {
-  background-color: rgb(3 171 136);
-  color: #fff;
-}
-.notion-item-red {
-  background-color: rgb(255 0 26);
-  color: #fff;
-}
-.notion-page.notion-page-no-cover.notion-page-has-icon.notion-page-has-text-icon.notion-full-page .notion-collection-row {
-  display: none;
-}
-.notion-list-body, .notion-list-item {
-  gap: 5px;
-}
-.notion-list-item.notion-page-link {
-  margin: 0 !important;
-  background: #0170dc;
-  padding: 20px 10px;
-  border-radius: 5px;
-  color: #fff;
-}
-.notion-list-item.notion-page-link:hover {
-  background: #00509e;
-}
-.notion-list-item.notion-page-link .notion-list-item-title .notion-property.notion-property-title .notion-page-link {
-  color: #fff;
-}
-.notion-text.notion-block-b71a93e6f4cc41beb44440f5bfd2820e {
-  text-align: center;
-}
-@media only screen and (max-width: 1200px) {
-  .notion-gallery-grid {
-
-  }
-}
-@media only screen and (max-width: 920px) {
-  .index-page.notion-page {
-    padding-left: 2vw;
-    padding-right: 2vw;
-  }
-  .notion-gallery-grid {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-gap: 2vmin;
-    gap: 2vmin;
-  }
-}
-@media only screen and (max-width: 720px) {
-  .notion-page {
-    padding-left: 2vw;
-    padding-right: 2vw;
-  }
-  .notion-gallery-grid {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-}
-@media only screen and (max-width: 400px) {
-
-}
-@media (max-width: 640px) {
-  .notion-search-button {
-    display: flex !important;
-  }
-  .notion-gallery-grid {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    grid-gap: 2vmin;
-    gap: 2vmin;
-  }
-  .notion-page-content-inner .notion-row .notion-column {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: min-content;
-  }
-  .notion-h1, .notion-h2, .notion-h3 {
-    margin-bottom: 0;
-    grid-column: span 2;
-  }
-  .notion-column .notion-page-link {
-    grid-column: span 1;
-    overflow: auto;
-  }
-  .notion-page-cover {
-    height: 20vh !important;
-    min-height: 20vh !important;
-    max-height: 20vh !important;
-    object-position: bottom !important;
-  }
-}
-@media only screen and (max-width: 368px) {
-  .notion-gallery-grid {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-    grid-gap: 2vmin;
-    gap: 2vmin;
-  }
-}
-@media only screen and (max-width: 312px) {
-  .notion-column .notion-page-link {
-    grid-column: span 2;
-    overflow: auto;
-  }
+.notion-equation.notion-equation-block{
+  align-items: center;
 }
