--- a/styles/notion.css
+++ b/styles/notion.css
@@ -182,6 +182,7 @@
 .notion-title {
   display: block;
   text-align: center;
+  margin-bottom: 0px;
 }
 
 .notion-collection-row {
@@ -410,4 +411,11 @@
 
 .notion-equation.notion-equation-block{
   align-items: center;
+}
+
+
+.notion-text:first-child {
+  padding-top: 0;
+  text-align: center;
+  margin-top: 0;
 }
