--- a/styles/notion.css
+++ b/styles/notion.css
@@ -62,7 +62,7 @@
 }
 
 .notion-header .notion-nav-header {
-  max-width: 1100px;
+  max-width: 1300px;
   margin: 0 auto;
   overflow-x: auto;
 }
@@ -418,4 +418,10 @@
   padding-top: 0;
   text-align: center;
   margin-top: 0;
+}
+.notion-spacer {
+  width: calc(min(15px, 4vw));
+}
+.notion-column {
+  width: 100%;
 }
