--- a/styles/notion.css
+++ b/styles/notion.css
@@ -428,3 +428,6 @@
 .notion-row.notion-block-8bd025b9e293437f8f8c52132454ef74 {
   margin-top: 3rem;
 }
+.notion-h.notion-h1 {
+  text-align: center;
+}
