--- a/styles/notion.css
+++ b/styles/notion.css
@@ -424,10 +424,15 @@
 }
 .notion-column {
   width: 100%;
+  grid-gap: 6px;
+  gap: 6px;
 }
 .notion-row.notion-block-8bd025b9e293437f8f8c52132454ef74 {
   margin-top: 3rem;
 }
 .notion-h.notion-h1 {
   text-align: center;
+}
+.notion-hash-link {
+  display: none;
 }
