--- a/styles/ubiquity.css
+++ b/styles/ubiquity.css
@@ -605,7 +605,7 @@ path[d='M16,1H4v28h22V11L16,1z M16,3.828L23.172,11H16V3.828z M24,27H6V3h8v10h10V
   text-align: right;
   padding: 16px;
   line-height: 1;
-  margin: 4px;
+  margin: 0;
   overflow: hidden;
   border-radius: 4px;
   text-transform: uppercase;
