--- a/styles/notion.css
+++ b/styles/notion.css
@@ -156,7 +156,7 @@
 }
 
 .notion-hr {
-  margin: 1em 0;
+  margin: 0.5em 0;
 }
 
 @media only screen and (max-width: 920px) {
@@ -435,4 +435,9 @@
 }
 .notion-hash-link {
   display: none;
+}
+@media (max-width: 640px) {
+  .notion-row {
+    gap: 1rem;
+  }
 }
