--- a/styles/ubiquity.css
+++ b/styles/ubiquity.css
@@ -603,7 +603,7 @@ path[d='M16,1H4v28h22V11L16,1z M16,3.828L23.172,11H16V3.828z M24,27H6V3h8v10h10V
   display: inline-table;
   position: relative;
   text-align: right;
-  padding: 16px;
+  padding: 16px 16px 16px 48px;
   line-height: 1;
   margin: 0;
   overflow: hidden;
@@ -611,7 +611,6 @@ path[d='M16,1H4v28h22V11L16,1z M16,3.828L23.172,11H16V3.828z M24,27H6V3h8v10h10V
   text-transform: uppercase;
   letter-spacing: 1px;
   opacity: 1;
-  padding-left: 48px;
   vertical-align: top;
   width: calc(50% - 8px);
   height: auto;
