--- a/styles/notion.css
+++ b/styles/notion.css
@@ -437,7 +437,28 @@
   display: none;
 }
 @media (max-width: 640px) {
-  .notion-row {
-    gap: 1rem;
+  .notion-page-content-inner .notion-row .notion-column {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: -webkit-min-content;
+    grid-auto-rows: min-content;
   }
+  .notion-row .notion-column {
+    gap: 1rem;
+    width: 100% !important;
+  }
+  .notion-h1, .notion-h2, .notion-h3 {
+    margin-bottom: 0;
+    grid-column: span 2;
+  }
+  .notion-column .notion-page-link {
+    grid-column: span 1;
+    overflow: auto;
+  }
+}
+@media (max-width: 312px) {
+    .notion-column .notion-page-link {
+        grid-column: span 2;
+        overflow: auto;
+    }
 }
