--- a/styles/notion.css
+++ b/styles/notion.css
@@ -564,6 +564,12 @@
 .navtitlebot a {
   font-size: 10px;
 }
+.notion-page.notion-page-has-cover.notion-page-has-icon.notion-page-has-text-icon.notion-full-page .notion-title {
+  padding-top: 2rem;
+}
+.notion-collection-page-properties {
+  display: none !important;
+}
 @media (max-width: 1024px) {
 
 }
