--- a/styles/notion.css
+++ b/styles/notion.css
@@ -563,6 +563,7 @@
 .navtitlebot,
 .navtitlebot a {
   font-size: 10px;
+  pointer-events: none;
 }
 .notion-page.notion-page-has-cover.notion-page-has-icon.notion-page-has-text-icon.notion-full-page .notion-title {
   padding-top: 4.5rem;
