--- a/styles/ubiquity.css
+++ b/styles/ubiquity.css
@@ -311,9 +311,9 @@ svg.notion-page-icon {
   background-image: var(--southeast-arrow-url);
   max-width: 24px;
   max-height: 24px;
-  top: 12px;
-  left: 12px;
-  /* position: absolute; */
+  top: -10px;
+  left: -12px;
+  position: relative;
   margin: 0;
 }
 
@@ -582,7 +582,7 @@ img:hover {
 }
 
 path[d='M16,1H4v28h22V11L16,1z M16,3.828L23.172,11H16V3.828z M24,27H6V3h8v10h10V27z M8,17h14v-2H8V17z M8,21h14v-2H8V21z M8,25h14v-2H8V25z'] {
-  display: none;
+  display: block;
 }
 
 .notion-page-content-inner {
