--- a/styles/notion.css
+++ b/styles/notion.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 /**
  * This file contains site-specifc style overrides for Notion elements from
  * react-notion-x.
