--- a/styles/notion.css
+++ b/styles/notion.css
@@ -46,6 +46,9 @@
 
 .notion-text {
   padding: 0.5em 2px;
+  font-family: "Amiri", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .notion-asset-caption {
